external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_labels_0.move
module 0x42::m {
    fun t0() {
        let _x = 'a';
    }
}
